# challenge

./: .gitignore  Dockerfile  Dockerfile.dev  README.md   docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
app/: main.py
app/auth/repository/: auth.py
app/auth/routers/: auth.py
app/auth/schema/: auth.py
app/employee/repository/: employee.py
app/employee/routers/: employee.py
app/employee/schema/: employee.py
app/monitor/: models.py
app/monitor/repository/: monitor.py
app/monitor/schema/: monitor.py
app/product/repository/: product.py
app/product/routers/: product.py
app/product/schema/: product.py
app/store/repository/: store.py
app/store/routers/: store.py
app/store/schema/: store.py
app/user/: models.py
app/user/repository/: user.py
app/user/schema/: user.py
app/utils/: hashing.py  oauth.py  token.py
core/: config.py
db/: database.py
sql/: sales_view_by_employee.sql  sales_view_by_product.sql  sales_view_by_store.sql  total_and_average_sales_per_employee.sql  total_and_average_sales_per_product.sql  total_and_average_sales_per_store.sql
test/: test_employee.py  test_hashing.py  test_product.py  test_store.py  test_token.py
