[tool.poetry]
name = "code-test"
version = "0.1.0"
description = "test celes"
authors = ["Hernando Escobar <hernandoescobar23@gmail.com>"]
readme = "README.md"
packages = [{ include = "code_test" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = { extras = ["standard"], version = "^0.24.0.post1" }
firebase-admin = "^6.2.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.2"
sqlalchemy = "^2.0.23"
passlib = "1.7.4"
pyjwt = "^2.8.0"
pytest = "^7.4.3"
email-validator = "^2.1.0.post1"
python-multipart = "^0.0.6"
pandas = "^2.1.3"
google-cloud-bigquery = "^3.13.0"
fastapi-pagination = "^0.12.13"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
